@@ -14,7 +14,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCmdMZ.c,v 1.83 2003/03/13 02:48:52 dgp Exp $
+ * RCS: @(#) $Id: tclCmdMZ.c,v 1.84 2003/04/07 16:55:13 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -4380,7 +4380,9 @@ TraceExecutionProc(ClientData clientData, Tcl_Interp *interp,
 		/* Restore result if trace execution was successful */
 		Tcl_RestoreResult(interp, &state);
 		iPtr->returnCode = stateCode;
-            }
+            } else {
+		Tcl_DiscardResult(&state);
+	    }
 
 	    Tcl_DStringFree(&cmd);
 	}
